--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
             "AlexPCooper\\": "src/"
         }
     },
+    "minimum-stability": "dev-master",
     "authors": [
         {
             "name": "Alex Cooper",
