📦️ Added further details to the package

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "authors": [
         {
             "name": "Alex Cooper",
-            "email": "alex.cooper.t21@gmail.com"
+            "email": "alex.cooper.t21@gmail.com",
+            "homepage": "https://alexpcooper.co.uk/"
         }
     ]
 }
