📦️ Added further details to the package

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "AlexPCooper\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Alex Cooper",
