📦️ Added further details to the package

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "alexpcooper/newsletters-to-kindle",
     "description": "Uses IMAP to check a mailbox, converts HTML newsletter emails to PDFs and sends them to Amazon Kindle email address",
-    "keywords": ["amazon", "kindle", "email", "pdf", "mpdf", "epub", "html", "utf8", "utf-8"],
+    "keywords": ["amazon", "kindle", "email", "pdf", "mpdf", "epub", "html", "utf8", "utf-8", "imap", "smtp"],
     "homepage": "https://github.com/alexpcooper/newsletters-to-kindle/",
     "type": "project",
     "license": "mit",
@@ -16,7 +16,7 @@
             "AlexPCooper\\": "src/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev-main",
     "authors": [
         {
             "name": "Alex Cooper",
