--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "AlexPCooper\\": "src/"
         }
     },
-    "minimum-stability": "dev-main",
+    "minimum-stability": "dev-master",
     "authors": [
         {
             "name": "Alex Cooper",
