--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
             "AlexPCooper\\": "src/"
         }
     },
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Alex Cooper",
