--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
         "zbateson/mail-mime-parser": "^2.2",
         "phpmailer/phpmailer": "^6.6"
     },
+    "source": {
+          "url": "https://github.com/alexpcooper/newsletters-to-kindle.git",
+          "type": "git",
+          "reference": "master"
+    },
     "autoload": {
         "psr-4": {
             "AlexPCooper\\": "src/"
