--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "AlexPCooper\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-master",
     "authors": [
         {
             "name": "Alex Cooper",
