--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alexpcooper/newsletters-to-kindle",
+    "name": "alexpcooper/newsletterstokindle",
     "description": "Uses IMAP to check a mailbox, converts HTML newsletter emails to PDFs and sends them to Amazon Kindle email address",
     "keywords": ["amazon", "kindle", "email", "pdf", "mpdf", "epub", "html", "utf8", "utf-8", "imap", "smtp"],
     "homepage": "https://github.com/alexpcooper/newsletters-to-kindle/",
@@ -9,7 +9,8 @@
         "php": ">=7.4"
         "mpdf/mpdf": "^8.0",
         "zbateson/mail-mime-parser": "^2.2",
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "alexpcooper/newsletters-to-kindle": "dev-master"
     },
     "source": {
           "url": "https://github.com/alexpcooper/newsletters-to-kindle.git",
