--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alexpcooper/newsletterstokindle",
+    "name": "alexpcooper/newsletters-to-kindle",
     "description": "Uses IMAP to check a mailbox, converts HTML newsletter emails to PDFs and sends them to Amazon Kindle email address",
     "keywords": ["amazon", "kindle", "email", "pdf", "mpdf", "epub", "html", "utf8", "utf-8", "imap", "smtp"],
     "homepage": "https://github.com/alexpcooper/newsletters-to-kindle/",
@@ -22,7 +22,7 @@
             "AlexPCooper\\": "src/"
         }
     },
-    "minimum-stability": "dev-master",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Alex Cooper",
