--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "mpdf/mpdf": "^8.0",
         "zbateson/mail-mime-parser": "^2.2",
         "phpmailer/phpmailer": "^6.6",
-        "alexpcooper/newsletters-to-kindle": "dev-master"
+        "alexpcooper/newsletters-to-kindle": "dev-master@dev"
     },
     "source": {
           "url": "https://github.com/alexpcooper/newsletters-to-kindle.git",
@@ -29,5 +29,11 @@
             "email": "alex.cooper.t21@gmail.com",
             "homepage": "https://alexpcooper.co.uk"
         }
+    ],
+    "repositories":[
+    	{
+    		"type": "vcs",
+    		"url": "git@alexpcooper/newsletters-to-kindle.git"
+    	}
     ]
 }
