📦️ Added further details to the package

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         {
             "name": "Alex Cooper",
             "email": "alex.cooper.t21@gmail.com",
-            "homepage": "https://alexpcooper.co.uk"
+            "homepage": "https://alexpcooper.co.uk",
+            "github": "https://github.com/alexpcooper/"
         }
     ],
     "repositories":[
