--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "library",
     "license": "mit",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
         "mpdf/mpdf": "^8.0",
         "zbateson/mail-mime-parser": "^2.2",
-        "phpmailer/phpmailer": "^6.6",
+        "phpmailer/phpmailer": "^6.6"
     },
     "autoload": {
         "psr-4": {
@@ -20,8 +20,7 @@
         {
             "name": "Alex Cooper",
             "email": "alex.cooper.t21@gmail.com",
-            "homepage": "https://alexpcooper.co.uk",
-            "github": "https://github.com/alexpcooper/"
+            "homepage": "https://alexpcooper.co.uk"
         }
-    ],
+    ]
 }
