--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "zbateson/mail-mime-parser": "^2.2",
         "phpmailer/phpmailer": "^6.6"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "AlexPCooper\\": "src/"
