--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "phpmailer/phpmailer": "^6.6"
     },
     "minimum-stability": "dev",
+    "prefer-stable" : true,
     "autoload": {
         "psr-4": {
             "AlexPCooper\\": "src/"
