--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "zbateson/mail-mime-parser": "^2.2",
         "phpmailer/phpmailer": "^6.6"
     },
-    "minimum-stability": "dev-master",
+    "minimum-stability": "dev",
     "prefer-stable" : true,
     "autoload": {
         "psr-4": {
